--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch==2.5.1
-torchvision==0.20.1
-torchaudio==2.5.1
+#torch==2.6.0
+#torchvision
+#torchaudio
 opencv-python==4.9.0.80
 diffusers==0.30.2
 transformers==4.48.0
@@ -15,8 +15,12 @@ loguru==0.7.2
 imageio==2.34.0
 imageio-ffmpeg==0.5.1
 safetensors==0.4.3
-mmgp==3.1.4.post1592653
+#mmgp==3.2.0
 gradio==5.8.0
 moviepy==1.0.3
 #flash-attn==2.7.2.post1
 #sageattention==1.0.6 
+omegaconf==2.2.3
+lightning
+fire
+av==11.0.0
